2003-09-10  Steffen Pingel  <squig@users.sourceforge.net>

	* settings.cpp (addToRecentProjects): Added recent project stuff.

	* mainwindow.cpp (MainWindow): Added icon.
	(fileSaveAs): Implemnted Save As.
	(openRecentProject): Implemnted open recent.

2003-09-08  Steffen Pingel  <squig@users.sourceforge.net>

	* blockview.cpp (mousePressEvent): Added cut, copy and paste
	actions to popup. 

	* mainwindow.cpp (initializeToolbars): Renamed draw to
	view. Removed draw line action.

	* canvasview.cpp (contentsMousePressEvent): Fixed popup menu
	position when scrolled.

	* connectaction.cpp (activeItem): Mark all pins during connect,
	snap to pins.

	* settings.cpp: Added color settings.

2003-09-07  Steffen Pingel  <squig@users.sourceforge.net>

	* mainwindow.cpp (editPaste): Made copy and paste work.

	* project.cpp (createViews): Added method to create views on all
	known canvases.

	* canvasview.cpp (contentsMouseMoveEvent): Added simple auto
	scrolling. 

	* blockview.h (class BlockView): Moved snapToGrid to MoveAction.

2003-08-29  Tammo van Lessen  <vanto@users.sourceforge.net>

	* abstractmodel.cpp: model type added

	* project.cpp (Project): project-wide ids implemented,	
		serialize/deserialize improved

2003-08-21  Steffen Pingel  <squig@users.sourceforge.net>

	* mdiwindow.cpp: Added zoom slots.

2003-08-21  Stefan Alexander Hauser  <hausersn@gspc70.informatik.uni-stuttgart.de>

	* settingsdialog.cpp (createPathTab): Completed the dialog.
